--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ trace = false
 hostname = 127.0.0.1
 database = fastadmin
 username = root
-password = tencentmysql123456
+password = root
 hostport = 3306
 prefix = fa_
